更新网站UI: 添加文件预览功能, 改进标题特效, 折叠使用说明, 更新.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,20 @@ node_modules/
 dist/
 *.log
 .DS_Store
+
+# 构建输出
+public/
+public.zip
+
+# 开发环境
+.cursor/
+.vscode/
+
+# 临时文件
+*.patch
+Chores/engineering/sync/temp/
+Chores/engineering/sync/test-*
+Chores/engineering/sync/test-output/
+
+# 旧版本的UI工程
+web-ui/
